# demo6_1_hitbot_gripper

./: README.md
demo6_config/: .setup_assistant  CMakeLists.txt  package.xml
demo6_config/config/: fake_controllers.yaml  gazebo_controllers.yaml  gazebo_controllers1.yaml  gazebo_hitbot_model.urdf  hitbot_gripper.urdf  hitbot_gripper.urdf.xacro  hitbot_model.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ros_controllers1.yaml  simple_moveit_controllers.yaml  simple_pick_and_place  stomp_planning.yaml
demo6_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
demo6_hitbot_gripper/urdf/: hitbot_gripper.urdf
demo6_hitbot_gripper/urdf/meshes/: body_link.STL  ee_hand.STL  link1.STL
demo6_hitbot_gripper/urdf/meshes_1/: base_link.STL
gripper_urdf/: CMakeLists.txt  package.xml
gripper_urdf/config/: joint_names_gripper_urdf.yaml
gripper_urdf/launch/: display.launch  gazebo.launch
gripper_urdf/meshes/: gripper_1.STL  gripper_2.STL
gripper_urdf/urdf/: gripper_urdf.csv  gripper_urdf.urdf
hitbot_scara/: .gitignore  README.md
hitbot_scara/hitbot_bringup/: CMakeLists.txt  package.xml
hitbot_scara/hitbot_bringup/launch/: real_arm.launch  sim_arm.launch
hitbot_scara/hitbot_control_direct/: CMakeLists.txt  package.xml
hitbot_scara/hitbot_control_direct/launch/: scara_control.launch  scara_pose_control.launch
hitbot_scara/hitbot_hw/: CMakeLists.txt  package.xml
hitbot_scara/hitbot_hw/config/: arm_controllers.yaml  controllers.yaml
hitbot_scara/hitbot_hw/include/: hitbot_hw.hpp
hitbot_scara/hitbot_hw/launch/: hitbot_hw.launch  hitbot_hw_no_cm.launch  hitbot_twin_and_upsample.launch
hitbot_scara/hitbot_hw/scripts/: hitbot_moveit_actioner.py  joint_command_upsampler.py  simple_queue.py
hitbot_scara/hitbot_hw/scripts/archive/: hitbot_control.py  hitbot_moveit_actioner-bak.py  hitbot_moveit_pick_planner.py  hitbot_moveit_pick_state_machine.py  jointsatat_plan.py  stack.py
hitbot_scara/hitbot_hw/scripts/hitbot_interface/: e-claw.ipynb  libsmall_scara_interface.so.1
hitbot_scara/hitbot_hw/src/: demo.cpp  gripper_control.cpp  hitbot_hw.cpp  hitbot_hw_bak.cpp  hitbot_hw_msg_control.cpp
hitbot_scara/hitbot_model/: CMakeLists.txt  package.xml
hitbot_scara/hitbot_model/launch/: display.launch  (+5 more)
(+24 files in other folders)
